k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-guide
  labels:
    app.kubernetes.io/name: cluster-guide-namespace
    app.kubernetes.io/part-of: cluster-guide
