k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-guide
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cluster-guide-pod
      app.kubernetes.io/part-of: cluster-guide
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cluster-guide-pod
        app.kubernetes.io/part-of: cluster-guide
    spec:
      containers:
      - name: cluster-guide
        image: harbor.intergalactic.dev/simple/cluster.guide
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
